# paper-code-DT-Twin

./: .gitignore  AUTHOR_METADATA_REQUIRED.md  CHANGELOG.md  CITATION.cff  CODEX_V1_1_5_PAPER_ALIGNMENT_AUDIT.md  CODEX_V1_1_6_RELEASE_AUDIT.md  CODEX_V1_1_7_PAPER_ALIGNMENT_AUDIT.md  CODEX_V1_1_8_PACKAGING_AUDIT.md  CODEX_V1_1_9_PAPER_FIG10_AUDIT.md  COPY_MAP.csv  FILE_INDEX.csv  LICENSE  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.3.md  RELEASE_NOTES_v1.1.4.md  RELEASE_NOTES_v1.1.5.md  RELEASE_NOTES_v1.1.6.md  RELEASE_NOTES_v1.1.7.md  RELEASE_NOTES_v1.1.8.md  RELEASE_NOTES_v1.1.9.md  RESTRUCTURE_REPORT.json  environment.yml  pyproject.toml  requirements.txt
anchor_safe_selector/: pipeline.py
assets/: README.md  level_c_bootstrap_files.csv  model_assets.csv
configs/: main_cfg.py
core/: config.py
data/: README.md
docs/: DATA_AVAILABILITY.md  FIGURE_REPRODUCTION.md  INTERNAL_PROVENANCE_NAMES.md  LEVEL_C_COMPLETION_PLAN.md  METHOD.md  PAPER_RESULT_MAPPING.md  REPRODUCIBILITY.md
main_evaluation/: pipeline.py
paper/: manuscript.tex
reporting/: __init__.py  final_figures.py  frozen.py  reporting.py  reproducible_figures.py
results/: README.md
scripts/: __init__.py  analyze_anchor_risk.py  analyze_anchor_safe_selector.py  analyze_architecture_coverage.py  analyze_main_evaluation.py  analyze_source_prior_bank.py  audit_anchor_safe_selector.py  audit_main_evaluation.py  audit_main_experiments.py  audit_robustness_experiments.py  audit_source_prior_bank.py  audit_supplementary_experiments.py  (+49 more)
(+139 files in other folders)
