[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complexity-constrained-few-shot-dt"
version = "1.1.3"
description = "Complexity-constrained few-shot digital twin model instantiation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23", "scipy>=1.9", "scikit-learn>=1.1", "torch>=2.0",
  "pandas>=1.5", "matplotlib>=3.6", "Pillow>=9.0", "pypdf>=4.0"
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
dt-verify-repository = "scripts.verify_repository:main"
dt-verify-assets = "scripts.verify_assets:main"
dt-smoke-test = "scripts.run_smoke_test:main"
dt-generate-paper-outputs = "scripts.generate_paper_outputs:main"
dt-full-reproduction = "scripts.run_full_reproduction:main"
dt-build-alibaba-bank = "scripts.build_alibaba2018_bank:main"
dt-build-level-c-bootstrap = "scripts.build_level_c_bootstrap:main"
dt-stage-level-c-bootstrap = "scripts.stage_level_c_bootstrap:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anchor_safe_selector*", "configs*", "core*", "experiments*", "main_evaluation*", "reporting*", "scripts*", "shared*", "source_prior_bank*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
